--- a/source/_posts/2020-06-16-trivy.md
+++ b/source/_posts/2020-06-16-trivy.md
@@ -9,162 +9,170 @@ tags:
 # 程序结构
 
 * 程序大体结构，看看里面都有啥，用到了啥
-    * TRIVY
-        * .circleci 持续集成/部署的脚本
-        * .github   github的配置
-        * ci        构建打包时候的脚本和配置
-        * cmd       main 入口
-        * contirb
-            * gitlab.tpl    漏洞的json数据结构？
-            * install.sh    安装的脚本？
-        * docs      两个文档，都是关于提issue和修复issue的
-            * help-wanted.md    关于怎么提issue 的规范
-            * triage.md     
-        * imgs      图片logo啥的
-        * integration   用来测试的？集成的？
-        * interal   核心代码
-        * misc      安装版本适配
-        * pkg       工具包
-        * rpc       用google的protoc，用于处理结构化数据，实现远程过程调用（rpc）
+  * TRIVY
+    * .circleci 持续集成/部署的脚本
+    * .github   github的配置
+    * ci        构建打包时候的脚本和配置
+    * cmd       main 入口
+    * contirb
+        * gitlab.tpl    漏洞的json数据结构？
+        * install.sh    安装的脚本？
+    * docs      两个文档，都是关于提issue和修复issue的
+        * help-wanted.md    关于怎么提issue 的规范
+        * triage.md     
+    * imgs      图片logo啥的
+    * integration   用来测试的？集成的？
+    * interal   核心代码
+    * misc      安装版本适配
+    * pkg       工具包
+    * rpc       用google的protoc，用于处理结构化数据，实现远程过程调用（rpc）
 
 # 大体原理
 
-* 实现： 根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的，根据漏洞数据库中的版本和现有版本对比来发现漏洞，例如
-    *  ubuntu 是这段
+## 远程
+  server 和 client 需要指定ip和token，ip需要是0.0.0.0，不能是localhost，因为0.0.0.0在本机连的所有网络中都是本机，localhost是本地回环，大部分用于测试。
     ```
-    if installedVersion.LessThan(fixedVersion) {
-        vulns = append(vulns, vuln)
-    }
+        trivy server --listen 0.0.0.0:4954 --token aircas
+        trivy client --remote 192.168.xxx.xxx:4954 --token aircas docker:tag
     ```
-    * redhat 是这段
+
+## 实现
+  根据操作系统的版本，有不同的探测器，在/pkg/detector/ospkg中，根据 ospackage 的版本判断的，根据漏洞数据库中的版本和现有版本对比来发现漏洞，例如
+  *  ubuntu 是这段
+  ```
+  if installedVersion.LessThan(fixedVersion) {
+      vulns = append(vulns, vuln)
+  }
+  ```
+  * redhat 是这段
+  ```
+  if installedVersion.LessThan(fixedVersion) {
+      vuln := types.DetectedVulnerability{
+          VulnerabilityID:  adv.VulnerabilityID,
+          PkgName:          pkg.Name,
+          InstalledVersion: installed,
+          FixedVersion:     fixedVersion.String(),
+          Layer:            pkg.Layer,
+      }
+      vulns = append(vulns, vuln)
+  }
+  ```
+  installedVersion 取的本地的版本，fixedVersion 是从数据库中取的漏洞库的修复版本
+
+## 数据库：
+  * 核心代码在 pkg\github\github.go 中，用 go-github 包中的 DownloadReleaseAsset 方法从 tirvy-db 获取数据，数据为 nil 时会返回url，再用 http.Get 方法取得漏洞库数据，放到缓存中
+  * 使用 https://github.com/aquasecurity/trivy-db 操纵漏洞数据库
+    * bbolt 包序列化数据
+    * 使用 github-action 设置了定时器，定时拉取漏洞数据，默认12小时一次，配置代码在 trivy-db/.github/workflows/cron.yml 中，job 流程是
+      * 安装 go/bbolt/检出trivy-db/安装依赖
+      * 执行 make db-fetch，具体在makefile中，创建缓存目录并下载漏洞数据
+      * 构建 app
+      * 压缩数据并上传 release
+  * 使用 https://github.com/aquasecurity/vuln-list-update 抓取数据，把数据改为json存入 https://github.com/aquasecurity/vuln-list 中
+    * vuln-list-update 里面有多种不同漏洞库的仓库地址
+    * trivy-db 大部分从 vuln-list 下载，小部分如 nodejs 从官网下载
+  * 保存历史数据最好还是用 server 的数据库 bbolt，反正也都实现了 rpc，直接调就行，请求历史数据也用 rpc 从 server 拿数据
+    * bbolt 存的是 key/value，一个 bucket 相当于一个表，key 不能重复
+    * bbolt 不能多个进程同时打开一个数据库，会导致挂起，可以传一个延时的项避免
     ```
-    if installedVersion.LessThan(fixedVersion) {
-        vuln := types.DetectedVulnerability{
-            VulnerabilityID:  adv.VulnerabilityID,
-            PkgName:          pkg.Name,
-            InstalledVersion: installed,
-            FixedVersion:     fixedVersion.String(),
-            Layer:            pkg.Layer,
-        }
-        vulns = append(vulns, vuln)
-    }
+        db, err := bolt.Open("my.db", 0600, &bolt.Options{Timeout: 1 * time.Second})
     ```
-    installedVersion 取的本地的版本，fixedVersion 是从数据库中取的漏洞库的修复版本
+    * bbolt 操作都在事务中，读写事务同一时间只能有一个 Update，只读的可以同时多个 View，也可用 Begin 自己控制
+    * 单个事务时线程不安全，处理多 routine 需要多个事务
+    * 创建 buckets，用 CreateBucket 或者 CreateBucketIfNotExists，删除用 DeleteBucket，获取用 Bucket([]byte(name))
+    * NextSequence 能从 Bucket 中取一个唯一的 uuid，可以拿来当key
+    * 从 Bucket 中取 Cursor 实现迭代，类似于迭代器，可以循环数据
+    ```
+        First()  Move to the first key.
+        Last()   Move to the last key.
+        Seek()   Move to a specific key.
+        Next()   Move to the next key.
+        Prev()   Move to the previous key.
+    ```
+    * 使用 bolter 可以查看 bbolt 数据，但不能修改，而且有时候打不开会一直开着进程占用数据库，导致其他方式读取失效，要 kill 进程
+  * trivy 把数据放到了 ~/.cache/trivy/db(从os.UserCacheDir()获取) 中，现在131MB，结构是
+    * trivy -> metadata -> data 版本/类型/更新时间等信息
+    * vulnerability -> 漏洞id(CVE-XXX) -> 漏洞明细json
+    * 各种系统 -> 各种软件包 -> 漏洞id(CVE-XXX) -> 漏洞明细json
 
-* 数据库：
-    * 核心代码在 pkg\github\github.go 中，用 go-github 包中的 DownloadReleaseAsset 方法从 tirvy-db 获取数据，数据为 nil 时会返回url，再用 http.Get 方法取得漏洞库数据，放到缓存中
-    * 使用 https://github.com/aquasecurity/trivy-db 操纵漏洞数据库
-        * bbolt 包序列化数据
-        * 使用 github-action 设置了定时器，定时拉取漏洞数据，默认12小时一次，配置代码在 trivy-db/.github/workflows/cron.yml 中，job 流程是
-            * 安装 go/bbolt/检出trivy-db/安装依赖
-            * 执行 make db-fetch，具体在makefile中，创建缓存目录并下载漏洞数据
-            * 构建 app
-            * 压缩数据并上传 release
-    * 使用 https://github.com/aquasecurity/vuln-list-update 抓取数据，把数据改为json存入 https://github.com/aquasecurity/vuln-list 中
-        * vuln-list-update 里面有多种不同漏洞库的仓库地址
-        * trivy-db 大部分从 vuln-list 下载，小部分如 nodejs 从官网下载
-    * 保存历史数据最好还是用 server 的数据库 bbolt，反正也都实现了 rpc，直接调就行，请求历史数据也用 rpc 从 server 拿数据
-        * bbolt 存的是 key/value，一个 bucket 相当于一个表，key 不能重复
-        * bbolt 不能多个进程同时打开一个数据库，会导致挂起，可以传一个延时的项避免
-        ```
-            db, err := bolt.Open("my.db", 0600, &bolt.Options{Timeout: 1 * time.Second})
-        ```
-        * bbolt 操作都在事务中，读写事务同一时间只能有一个 Update，只读的可以同时多个 View，也可用 Begin 自己控制
-        * 单个事务时线程不安全，处理多 routine 需要多个事务
-        * 创建 buckets，用 CreateBucket 或者 CreateBucketIfNotExists，删除用 DeleteBucket，获取用 Bucket([]byte(name))
-        * NextSequence 能从 Bucket 中取一个唯一的 uuid，可以拿来当key
-        * 从 Bucket 中取 Cursor 实现迭代，类似于迭代器，可以循环数据
-        ```
-            First()  Move to the first key.
-            Last()   Move to the last key.
-            Seek()   Move to a specific key.
-            Next()   Move to the next key.
-            Prev()   Move to the previous key.
-        ```
-        * 使用 bolter 可以查看 bbolt 数据，但不能修改，而且有时候打不开会一直开着进程占用数据库，导致其他方式读取失效，要 kill 进程
-    * trivy 把数据放到了 ~/.cache/trivy/db(从os.UserCacheDir()获取) 中，现在131MB，结构是
-        * trivy -> metadata -> data 版本/类型/更新时间等信息
-        * vulnerability -> 漏洞id(CVE-XXX) -> 漏洞明细json
-        * 各种系统 -> 各种软件包 -> 漏洞id(CVE-XXX) -> 漏洞明细json
+## 表结构
+  * ~~扫描历史也放到 bbolt 中，数据结构如下~~
+      * ~~trivy -> history -> 20200729 -> 12:12:12 -> [{Target: "xxx", Typec: "xxx",VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]},{Target: "xxx", Typec: "xxx", VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]}]~~
+  * ~~账号数据保存需要 头-行 的结构，具体如下~~
+      * ~~trivy -> users -> head -> "张三" -> 9234572938457(uuid)~~
+      * ~~trivy -> users -> line -> 9234572938457(uuid) -> username -> "张三"~~
+                                                      ~~-> password -> "123456"~~
+                                                      ~~-> type -> super/common~~
+                                                      ~~-> ...~~
+  * trivy.db 每次更新都是全量更新，不知道为啥压缩一下17MB，解压了就是126MB，把我坑死了，还是要用mysql
+  * mysql 数据结构如下
+      ```
+          -- trivy.history definition
+          CREATE TABLE `history` (
+          `scanid` varchar(50) NOT NULL,
+          `type` varchar(20) DEFAULT NULL,
+          `time` datetime DEFAULT NULL,
+          `target` varchar(255) DEFAULT NULL,
+          `fromwhere` varchar(10) DEFAULT NULL,
+          `fromid` varchar(50) DEFAULT NULL,
+          `userid` varchar(50) DEFAULT NULL,
+          PRIMARY KEY (`scanid`)
+          ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
-* 新增
-    * ~~扫描历史也放到 bbolt 中，数据结构如下~~
-        * ~~trivy -> history -> 20200729 -> 12:12:12 -> [{Target: "xxx", Typec: "xxx",VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]},{Target: "xxx", Typec: "xxx", VulnerabilityID: ["CVE-xxx1","CVE-xxx2","CVE-xxx3"]}]~~
-    * ~~账号数据保存需要 头-行 的结构，具体如下~~
-        * ~~trivy -> users -> head -> "张三" -> 9234572938457(uuid)~~
-        * ~~trivy -> users -> line -> 9234572938457(uuid) -> username -> "张三"~~
-                                                        ~~-> password -> "123456"~~
-                                                        ~~-> type -> super/common~~
-                                                        ~~-> ...~~
-    * trivy.db 每次更新都是全量更新，不知道为啥压缩一下17MB，解压了就是126MB，把我坑死了，还是要用mysql
-    * mysql 数据结构如下
-        ```
-            -- trivy.history definition
-            CREATE TABLE `history` (
-            `scanid` varchar(50) NOT NULL,
-            `type` varchar(20) DEFAULT NULL,
-            `time` datetime DEFAULT NULL,
-            `target` varchar(255) DEFAULT NULL,
-            `fromwhere` varchar(10) DEFAULT NULL,
-            `fromid` varchar(50) DEFAULT NULL,
-            `userid` varchar(50) DEFAULT NULL,
-            PRIMARY KEY (`scanid`)
-            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+          -- trivy.historyline definition
+          CREATE TABLE `historyline` (
+          `scanid` varchar(50) NOT NULL,
+          `targetfile` varchar(20) NOT NULL,
+          `type` varchar(20) DEFAULT NULL,
+          `vulnerabilityid` varchar(100) NOT NULL,
+          `pkgname` varchar(50) DEFAULT NULL,
+          `installedversion` varchar(20) NOT NULL,
+          `fixedversion` varchar(100) DEFAULT NULL,
+          `digest` varchar(200) DEFAULT NULL,
+          `diffid` varchar(200) DEFAULT NULL,
+          `library` varchar(20) DEFAULT NULL,
+          `severity` varchar(20) DEFAULT NULL,
+          `severitysource` varchar(200) DEFAULT NULL,
+          PRIMARY KEY (`scanid`,`vulnerabilityid`,`targetfile`,`installedversion`) USING BTREE
+          ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
-            -- trivy.historyline definition
-            CREATE TABLE `historyline` (
-            `scanid` varchar(50) NOT NULL,
-            `targetfile` varchar(20) NOT NULL,
-            `type` varchar(20) DEFAULT NULL,
-            `vulnerabilityid` varchar(100) NOT NULL,
-            `pkgname` varchar(50) DEFAULT NULL,
-            `installedversion` varchar(20) NOT NULL,
-            `fixedversion` varchar(100) DEFAULT NULL,
-            `digest` varchar(200) DEFAULT NULL,
-            `diffid` varchar(200) DEFAULT NULL,
-            `library` varchar(20) DEFAULT NULL,
-            `severity` varchar(20) DEFAULT NULL,
-            `severitysource` varchar(200) DEFAULT NULL,
-            PRIMARY KEY (`scanid`,`vulnerabilityid`,`targetfile`,`installedversion`) USING BTREE
-            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+          -- trivy.`user` definition
+          CREATE TABLE `user` (
+          `userid` varchar(50) NOT NULL,
+          `salt` varchar(50) NOT NULL,
+          `username` varchar(255) NOT NULL,
+          `password` varchar(255) NOT NULL,
+          `createtime` datetime DEFAULT NULL,
+          `logintime` datetime DEFAULT NULL,
+          `usertype` varchar(10) DEFAULT NULL,
+          PRIMARY KEY (`userid`) USING BTREE
+          ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
-            -- trivy.`user` definition
-            CREATE TABLE `user` (
-            `userid` varchar(50) NOT NULL,
-            `salt` varchar(50) NOT NULL,
-            `username` varchar(255) NOT NULL,
-            `password` varchar(255) NOT NULL,
-            `createtime` datetime DEFAULT NULL,
-            `logintime` datetime DEFAULT NULL,
-            `usertype` varchar(10) DEFAULT NULL,
-            PRIMARY KEY (`userid`) USING BTREE
-            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+          -- trivy.`timer` definition
+          CREATE TABLE `timer` (
+          `timerid` varchar(50) NOT NULL,
+          `entryid` int(10) NOT NULL,
+          `target` varchar(100) DEFAULT NULL,
+          `type` varchar(20) DEFAULT NULL,
+          `createtime` datetime DEFAULT NULL,
+          `lasttime` datetime DEFAULT NULL,
+          `userid` varchar(50) DEFAULT NULL,
+          `successtime` varchar(4) DEFAULT NULL,
+          `failtime` varchar(4) DEFAULT NULL,
+          PRIMARY KEY (`timerid`) USING BTREE
+          ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+      ```
+  * history 分头行表，头表一次扫描存一条，行表一个漏洞存一条，行表只存漏洞库中查不到的数据，如安装版本，修复版本等，其他数据从 bbolt 中查。
 
-            -- trivy.`timer` definition
-            CREATE TABLE `timer` (
-            `timerid` varchar(50) NOT NULL,
-            `entryid` int(10) NOT NULL,
-            `target` varchar(100) DEFAULT NULL,
-            `type` varchar(20) DEFAULT NULL,
-            `createtime` datetime DEFAULT NULL,
-            `lasttime` datetime DEFAULT NULL,
-            `userid` varchar(50) DEFAULT NULL,
-            `successtime` varchar(4) DEFAULT NULL,
-            `failtime` varchar(4) DEFAULT NULL,
-            PRIMARY KEY (`timerid`) USING BTREE
-            ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
-        ```
-    * history 分头行表，头表一次扫描存一条，行表一个漏洞存一条，行表只存漏洞库中查不到的数据，如安装版本，修复版本等，其他数据从 bbolt 中查。
-
-* 定时任务及管理
+## 定时任务及管理
     * time.newTicker 能实现定时器的功能，但是多个定时任务的管理不好实现，改为使用 cron 框架
     
 
-* 包解析：
+## 包解析：
     * 在 [fanal](https://github.com/aquasecurity/fanal) 中，能把操作系统的包 (os package) 解析出其详情。
     * trivy 中 pkg\scanner\local\scan.go 73 行直接解析出了所有依赖包
 
-* 编译方法： 环境变量配置为
+## 编译方法： 环境变量配置为
     ```
         export GOROOT=/usr/local/go
         export GOPATH=$GOROOT/lihang
@@ -174,71 +182,171 @@ tags:
     ```
     * 进入 $GOROOT/cmd/trivy 执行 go install 即可编译，编译结果在 $GOROOT/bin 中，直接运行即可，也可以加入 ~/.bashrc 的环境变量中，再 source ~/.bashrc 刷新一下就能直接 trivy xxx 了
 
-* restful 方案
+## restful 方案
     * [go-restful](https://github.com/emicklei/go-restful.git) 框架能够提供 restful 接口，kubernetes 也是用了这个框架，还有相应的 [go-restful-swagger12](https://github.com/emicklei/go-restful-swagger12) 框架提供了接口文档
     * [iris](http://github.com/kataras/iris)，安装参考[这里](https://www.cnblogs.com/Yang-Sen/p/11990195.html)，提供了较为全面的 web 解决方案
     * linux 中 nohup 实现后台进程跑程序，退出 shell 进程也不会被杀
+        ```
+            nohup command &
+        ```
 
-* 版本管理
-    * .git 过大， 处理办法
-        1. 运行 gc ，生成 pack 文件（后面的 --prune=now 表示对之前的所有提交做修剪，有的时候仅仅 gc 一下.git 文件就会小很多）
-            ```
-                $ git gc --prune=now
-            ```
-        2. 找出最大的三个文件（看自己需要）
-            ```
-                $ git verify-pack -v .git/objects/pack/*.idx | sort -k 3 -n | tail -3
-                # 示例输出：
-                #1debc758cf31a649c2fc5b0c59ea1b7f01416636 blob   4925660 3655422 14351
-                #c43a8da9476f97e84b52e0b34034f8c2d93b4d90 blob   154188651 152549294 12546842
-                #2272096493d061489349e0a312df00dcd0ec19a2 blob   155414465 153754005 165096136
-            ```
-        3. 查看那些大文件究竟是谁（c43a8da 是上面大文件的hash码）
-            ```
-                $ git rev-list --objects --all | grep c43a8da
-                # c43a8da9476f97e84b52e0b34034f8c2d93b4d90 data/bigfile
-            ```
-        4. 移除对该文件的引用（也就是 data/bigfile）
-            ```
-                $ git filter-branch --force --index-filter "git rm --cached --ignore-unmatch 'data/bigfile'"  --prune-empty --tag-name-filter cat -- --all
-            ```
-        5. 进行 repack 
-            ```
-                $ git for-each-ref --format='delete %(refname)' refs/original | git update-ref --stdin
-                $ git reflog expire --expire=now --all
-                $ git gc --prune=now
-            ```
-        6. 查看 pack 的空间使用情况
-            ```
-                $ git count-objects -v
-            ```
-    * 也可以直接用--depth=1只获取最新的commit即可
-    * 代码 fork 一份到自己的仓库，如果原作者更新了，发起一个 Pull Request 更新一下即可
+## 版本管理
+  * .git 过大， 处理办法
+      1. 运行 gc ，生成 pack 文件（后面的 --prune=now 表示对之前的所有提交做修剪，有的时候仅仅 gc 一下.git 文件就会小很多）
+          ```
+              $ git gc --prune=now
+          ```
+      2. 找出最大的三个文件（看自己需要）
+          ```
+              $ git verify-pack -v .git/objects/pack/*.idx | sort -k 3 -n | tail -3
+              # 示例输出：
+              #1debc758cf31a649c2fc5b0c59ea1b7f01416636 blob   4925660 3655422 14351
+              #c43a8da9476f97e84b52e0b34034f8c2d93b4d90 blob   154188651 152549294 12546842
+              #2272096493d061489349e0a312df00dcd0ec19a2 blob   155414465 153754005 165096136
+          ```
+      3. 查看那些大文件究竟是谁（c43a8da 是上面大文件的hash码）
+          ```
+              $ git rev-list --objects --all | grep c43a8da
+              # c43a8da9476f97e84b52e0b34034f8c2d93b4d90 data/bigfile
+          ```
+      4. 移除对该文件的引用（也就是 data/bigfile）
+          ```
+              $ git filter-branch --force --index-filter "git rm --cached --ignore-unmatch 'data/bigfile'"  --prune-empty --tag-name-filter cat -- --all
+          ```
+      5. 进行 repack 
+          ```
+              $ git for-each-ref --format='delete %(refname)' refs/original | git update-ref --stdin
+              $ git reflog expire --expire=now --all
+              $ git gc --prune=now
+          ```
+      6. 查看 pack 的空间使用情况
+          ```
+              $ git count-objects -v
+          ```
+  * 也可以直接用--depth=1只获取最新的commit即可
+  * 代码 fork 一份到自己的仓库，如果原作者更新了，发起一个 Pull Request 更新一下即可
+
+# 扫描支持
+  * 操作系统
+
+| 仓库中所在目录 | 操作系统 | 发布源 | URL | 备注 |
+| ------ | ------ | ------ | ------ | ------ |
+| alpine/ | Alpine Linux | Alpine secdb | https://secdb.alpinelinux.org/ | alpine |
+| amazon/1 | Amazon Linux | Amazon Linux Security Center | https://alas.aws.amazon.com/ | Amazon linux是亚马逊公司针对自己的EC2虚拟机推出的一个Linux版本，可以免费使用，和Red Hat Enterprise版本高度兼容 |
+| amazon/2 | Amazon Linux 2 | Amazon Linux Security Center | https://alas.aws.amazon.com/alas2.html | - |
+| debian/ | Debian GNU/Linux | Security Bug Tracker | https://security-tracker.debian.org/tracker/ | - |
+| nvd/ | - | National Vulnerability Database | https://nvd.nist.gov/ | - |
+| oval/debian | Debian GNU/Linux | OVAL | https://www.debian.org/security/oval/ | - |
+| oval/oracle | Oracle Linux | OVAL | https://linux.oracle.com/security/oval/ | - |
+| oval/redhat | RHEL/CentOS | OVAL | https://www.redhat.com/security/data/oval/v2/ | - |
+| redhat/ | RHEL/CentOS | Security Data | https://www.redhat.com/security/data/metrics/ | - |
+| ubuntu/ | Ubuntu | Ubuntu CVE Tracker | https://people.canonical.com/~ubuntu-security/cve/ | - |
+| cvrf/suse | OpenSUSE/SLES | SUSE Security CVRF | http://ftp.suse.com/pub/projects/security/cvrf/ | - |
+| photon/ | Photon | Photon Security Advisory | https://github.com/vmware/photon/wiki/ Security-Advisories https://packages.vmware.com/photon/photon_cve_metadata/ | 游戏引擎？ |
+| ghsa/ | - | GitHub Advisory Database | https://github.com/advisories/ | 开源组件库 |
+| glad/ | - | GitLab Advisory Database | https://gitlab.com/gitlab-org/advisories-community/ | 开源组件库 |
+
+  * 开源组件库
+    * 从 Github Advisory Database 和 GitLab Advisory Database 爬来的
+    * 支持库：
+      * Composer (PHP)
+      * Gomod (Go) 
+      * Maven (Java)
+      * npm (JavaScript)
+      * NuGet (.Net)
+      * Python (pip)
+      * RubyGems (Ruby)
 
 
 # 代码工具
-
 ## urfave/cli
-* 一个封装了命令行输入的框架，可以构建应用，使用命令行输入控制应用
-* cli使用
-    * xxx help 可以显示注册 app 时配置的信息
-    * Action 即调用方法， 传入了 cli 的上下文，可获取参数
-    * Flags 参数定义名称，类型，默认值等
-    * Aliases ， Name 的简写，都能调起app
-    * Commands 即命令，第一个是App Name， 第二个是 Commands， 第三个是Flags
-    * EnableBashCompletion 为true， 开启自动补全命令
-    * Subcommands 在 Commands 中可以嵌套
+  * 一个封装了命令行输入的框架，可以构建应用，使用命令行输入控制应用
+  * cli使用
+  * xxx help 可以显示注册 app 时配置的信息
+  * Action 即调用方法， 传入了 cli 的上下文，可获取参数
+  * Flags 参数定义名称，类型，默认值等
+  * Aliases ， Name 的简写，都能调起app
+  * Commands 即命令，第一个是App Name， 第二个是 Commands， 第三个是Flags
+  * EnableBashCompletion 为true， 开启自动补全命令
+  * Subcommands 在 Commands 中可以嵌套
+
 ## ProtoBuf
-* rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
-* 实现了远程过程调用，建一个服务端，多个客户端，数据库只放在服务端，客户端上也能扫描，这个过程使用了 protobuf 实现远程调用
+  * rpc 文件中的代码都是它生成的，用于处理结构化数据，是一个用于将数据结构化的协议，类似于JSON
+  * 实现了远程过程调用，建一个服务端，多个客户端，数据库只放在服务端，客户端上也能扫描，这个过程使用了protobuf 实现远程过程调用
+
 ## Wire
-* 一个依赖注入的框架，编译期完成注入，用于初始化
+  * 一个依赖注入的框架，编译期完成注入，用于初始化
+
 ## mockery
-* 单元测试
+  * 单元测试
+
 ## make
-* 一个开源的构建工具，多用于大型项目的编译，通过 makefile 文件配置
+  * 一个开源的构建工具，多用于大型项目的编译，通过 makefile 文件配置
+
 ## gomod
-* golang 的包管理工具，[这是介绍](https://roberto.selbach.ca/intro-to-go-modules/)，[这是官网](https://github.com/golang/go/wiki/Modules)
-* 执行 go mod help 能看到常用的命令
-* ![](/public/images/golang2.png)
-* [常用命令](https://zhuanlan.zhihu.com/p/103534192)
+  * golang 的包管理工具，[这是介绍](https://roberto.selbach.ca/intro-to-go-modules/)，[这是官网](https://github.com/golang/go/wiki/Modules)
+  * 执行 go mod help 能看到常用的命令
+  * ![](/public/images/golang2.png)
+  * [常用命令](https://zhuanlan.zhihu.com/p/103534192)
+
+# 其他容器漏洞扫描工具
+* ![](/public/images/scanners.png)
+
+# 病毒扫描
+* https://github.com/Cisco-Talos/clamav
+  * 主要用于邮件（文件）的扫描
+  * 使用c语言
+  * 能扫描木马、病毒、恶意软件和其他恶意威胁
+  * 多种系统支持
+  * ![](/public/images/scanners1.png)
+  * 支持扫描内容
+    1) 已知的恶意二进制文件的MD5哈希值
+    2) PE(Windows 中可执行文件格式)节的MD5哈希值
+    3) 十六进制特征码（shellcode）
+    4) 存档元数据特征码
+    5) 已知的合法文件的白名单数据库
+
+* https://github.com/eliasgranderubio/dagda
+  * 使用python
+  * 能在容器镜像中扫描CVE漏洞大概和病毒
+  * 病毒扫描是集成了clamav实现
+    * 扫描时拉取tiredofit/clamav镜像，创建container进行扫描
+    ```
+      # Run ClamAV
+      def _clamav_run(docker_driver, temp_dir):
+          # Docker pull for ensuring the tiredofit/clamav image
+          docker_driver.docker_pull('tiredofit/clamav')
+          # Start container
+          container_id = docker_driver.create_container('tiredofit/clamav',
+                                                        "clamscan -ri  " + temp_dir,
+                                                        [
+                                                            temp_dir
+                                                        ],
+                                                        docker_driver.get_docker_client().create_host_config(
+                                                            binds=[
+                                                                temp_dir + ':' + temp_dir + ':ro'
+                                                            ]))
+          docker_driver.docker_start(container_id)
+          # Wait for clamav
+          output = docker_driver.docker_logs(container_id, True, False, True)
+          # Stop container
+          docker_driver.docker_stop(container_id)
+          # Clean up
+          docker_driver.docker_remove_container(container_id)
+          # Return
+          return output
+    ```
+
+* https://github.com/VirusTotal/yara
+  * c 语言开发，提供 python 接口和 c 接口
+  * 恶意代码识别
+  * 主要原理是规则匹配，需要自己找规则库
+  * 网上很多 calmav 和 yara 集成开发的，即用calmav的规则库进行匹配，需要用c或者python调用yara
+
+* 安全测评组织：AV-Comparatives，AV-TEST和Virus Bulletin
+  * avast: windows/mac/ios/android
+  * avg: windows/mac/ios/android
+  * 卡巴斯基: Windows
+  * BITDEFENDER
+    * 家庭版： windows/mac/ios/android
+    * 商业版： 
