--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -133,6 +133,24 @@ tags: goline
 
 * 寄存器功能对应功能如下![](/public/images/goline4.jpg)，相应的配置流程如下图![](/public/images/goline5.jpg)
 
+* 定时器
+    1. HSI振荡器与HSE的区别就在于一个是内部的时钟源，一个是外部的时钟源，Inside与External。需要注意用哪个
+    2. STM8 默认时钟源 HSI/8分频，HSI 频率16MHz, 因此主时钟频率是 16/8 是 2MHz。
+    3. TIM4 中主要设置七个寄存器
+        * 控制寄存器        TIM4_CR1        
+            * 位7   ARPE    自动预装载使能位，表示什么时候自动重装载寄存器数据生效
+            * 位3   OPM     单脉冲模式位
+            * 位2   URS     更新中断请求位
+            * 位1   UDIS    禁止更新位，与TIM4_EGR有关，一般为0
+            * 位0   CEN     计数器使能位
+            * 其他位没用设为0
+        * 中断使能寄存器    TIM4_IER        仅最后一位有效，中断启用或禁止，中断后产生UIF
+        * 状态寄存器        TIM4_SR         仅最后一位有效，标志是否发生更新事件，一般不设置
+        * 事件产生寄存器    TIM4_EGR        仅最后一位有效，不用等计数器溢出就产生UEV,人为产生更新事件，一般不设置
+        * 计数器            TIM4_CNTR       0-256，存初始值
+        * 预分频寄存器      TIM4_PSCR       仅后三位有效，存分频系数（0 - 7）
+        * 自动重装载寄存器  TIM4_ARR        0-256，存计数最大值，默认255
+
 ## 实践相关
 
 * 发光二极管的方向，有个大写的T字的标志，T上面的横对应正极。还有个方法是正面有个带绿色小标的一端，是负极，焊这个要注意连接，有时焊不到焊盘上
