--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -133,6 +133,9 @@ tags: goline
 
 * 寄存器功能对应功能如下![](/public/images/goline4.jpg)，相应的配置流程如下图![](/public/images/goline5.jpg)
 
+* 定时器
+    * https://zhuanlan.zhihu.com/p/103219353
+
 ## 实践相关
 
 * 发光二极管的方向，有个大写的T字的标志，T上面的横对应正极。还有个方法是正面有个带绿色小标的一端，是负极，焊这个要注意连接，有时焊不到焊盘上
