--- a/source/_posts/2020-09-01-goline.md
+++ b/source/_posts/2020-09-01-goline.md
@@ -150,6 +150,11 @@ tags: goline
         * 计数器            TIM4_CNTR       0-256，存初始值
         * 预分频寄存器      TIM4_PSCR       仅后三位有效，存分频系数（0 - 7）
         * 自动重装载寄存器  TIM4_ARR        0-256，存计数最大值，默认255
+* 中断
+    1. 共 32 个中断源，实践上来讲表里的中断向量 加2 才是对的，![](/public/images/goline14.jpg)，![](/public/images/goline15.jpg)
+    2. 几个重要寄存器：
+        * PB_CR2_C20：0表示禁止PB0端口外部中断，1表示允许PB0端口外部中断（这个实际上是GPIO的控制寄存器）
+        * PB_CR1: 配置上升沿、下降沿等处罚方式
 
 ## 实践相关
 
@@ -177,3 +182,4 @@ tags: goline
     * 放元件的小盒子
     * 便携显示器的外盒
 * lcd 定制学习，用什么协议，供电，功耗等
+* 算法优化，每隔2s换一次 收/放 的显示，2s 内统计到底多少次收放，哪个多显示哪个
