--- a/source/_posts/2020-06-12-golang.md
+++ b/source/_posts/2020-06-12-golang.md
@@ -180,9 +180,9 @@ ch = make(chan int, 3) // buffered channel with capacity 3
 
 * go version 版本
 * go env 环境变量
-* go build 编译项目
+* go build 编译项目, go build -o outputName /xxx/cmd/trivy/main.go
 * go run 运行项目
-* get 下载并安装包和依赖
+* go get 下载并安装包和依赖
 * go install 编译并安装包和依赖
 * go list 列出包
 
