--- a/source/_posts/2020-09-23-docker.md
+++ b/source/_posts/2020-09-23-docker.md
@@ -72,3 +72,7 @@ docker container exec -it f144a5992e99 /bin/bash
 docker tag 1417b43a3ff5 [name]:[tag]
 ```
 
+* nginx 启动前端
+    * docker run -p 8083:80 -v /opt/qly（宿主机前端路径）:/usr/share/nginx/html:ro -v /opt/qly/default.conf（宿主机前端路径）:/etc/nginx/conf.d/default.conf:ro -d nginx
+    * docker run -p 8083:80 -v /opt/qly（宿主机前端路径）:/usr/share/nginx/html:ro -it nginx /bin/bash
+        * /usr/sbin/nginx 启动
